--- a/circle.yml
+++ b/circle.yml
@@ -27,12 +27,13 @@ deployment:
       - make pack
       - make upload
       - echo "rd_ui/app" >> .dockerignore
-      - docker build -t easytaxibr/redash:$(./manage.py version | sed -e "s/\+/./") .
-      - docker login -u $DOCKER_USER -p$DOCKER_PASS
-      - docker push easytaxibr/redash:$(./manage.py version | sed -e "s/\+/./")
+      - docker pull redash/redash:latest
+      - docker build -t redash/redash:$(./manage.py version | sed -e "s/\+/./") .
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push redash/redash:$(./manage.py version | sed -e "s/\+/./")
 notify:
   webhooks:
-    - url: https://webhooks.gitter.im/e/350e4594e156df52520c
+    - url: https://webhooks.gitter.im/e/895d09c3165a0913ac2f
 general:
   branches:
     ignore:
