Add env after the login command

--- a/circle.yml
+++ b/circle.yml
@@ -30,6 +30,7 @@ deployment:
       - echo "rd_ui/app" >> .dockerignore
       - docker build -t easytaxibr/redash:$(./manage.py version | sed -e "s/\+/./") .
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - env
       - docker push easytaxibr/redash:$(./manage.py version | sed -e "s/\+/./")
 notify:
   webhooks:
