--- a/circle.yml
+++ b/circle.yml
@@ -31,6 +31,7 @@ deployment:
       - docker build -t easytaxibr/redash:$(./manage.py version | sed -e "s/\+/./") .
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - env
+      - cat /home/ubuntu/.docker/config.json
       - docker push easytaxibr/redash:$(./manage.py version | sed -e "s/\+/./")
 notify:
   webhooks:
