Update cirlce.yml to build release_* branches

--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,7 @@ test:
     - nosetests --with-xunit --xunit-file=$CIRCLE_TEST_REPORTS/junit.xml --with-coverage --cover-package=redash tests/
 deployment:
   github_and_docker:
-    branch: master
+    branch: [master, /release_.*/]
     commands:
       - make pack
       - make upload
