--- a/circle.yml
+++ b/circle.yml
@@ -12,10 +12,9 @@ dependencies:
     - pip install -r requirements_dev.txt
     - pip install -r requirements.txt
     - pip install pymongo==3.2.1
-    - if [ "$CIRCLE_BRANCH" = "master" ]; then make deps; fi
+    - make deps
   cache_directories:
     - node_modules/
-    - rd_ui/node_modules/
     - rd_ui/app/bower_components/
 test:
   override:
