--- a/circle.yml
+++ b/circle.yml
@@ -27,9 +27,9 @@ deployment:
       - make pack
       - make upload
       - echo "rd_ui/app" >> .dockerignore
-      - docker build -t easytaxibr/redash:$(./manage.py version | sed -e "s/\+/./") .
+      - docker build -t easytaxi/redash:$(./manage.py version | sed -e "s/\+/./") .
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push easytaxibr/redash:$(./manage.py version | sed -e "s/\+/./")
+      - docker push easytaxi/redash:$(./manage.py version | sed -e "s/\+/./")
 notify:
   webhooks:
     - url: https://webhooks.gitter.im/e/350e4594e156df52520c
